SIMD Intrinsics Fortran bindings/GMS_avx512_wrappers_.h

// Compile it as a C-code

    // Interoperable with corresponding Fortran derived type

        typedef struct __attribute__((align(64))) v8f64 {
                 double v[8];
        }v8f64;
	v8f64  v8f64_maskz_roundscale_round_pd(unsigned char, v8f64, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_roundscale_round_pd(v8f64, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_scalef_pd(v8f64, unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_scalef_pd(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_scalef_pd(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_scalef_round_pd(v8f64, unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_scalef_round_pd(unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_scalef_round_pd(v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_mov_pd(v8f64, unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_mov_pd(unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_movedup_pd(v8f64, unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_movedup_pd(unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_movedup_pd(v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_set4_pd(double, double, double, double)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
        

	v8f64  v8f64_mask_max_pd(v8f64, unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_max_pd(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_max_pd(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_max_round_pd(v8f64, unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_max_round_pd(unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_max_round_pd(v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_min_pd(v8f64, unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_min_pd(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_min_pd(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_min_round_pd(v8f64, unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_min_round_pd(unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));